prettierrc.json file

--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-    "name": "vidjot_by_me",
-    "version": "1.0.0",
-    "description": "Project from course made by me",
-    "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Pedro Castro",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.18.2",
-        "express-handlebars": "^7.1.2"
-    }
+  "name": "vidjot_by_me",
+  "version": "1.0.0",
+  "description": "Project from course made by me",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Pedro Castro",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2"
+  },
+  "type": "module"
 }
