--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Pedro Castro",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mongoose": "^8.0.0"
