--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.0.0"
   },
   "type": "module"
