--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Pedro Castro",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "express": "^4.18.2",
