--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^20.11.7",
+    "typescript": "^5.3.3"
+  }
 }
